# NeurOCAST_BiasCorrection

./: README.md  patch_nemo.py  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
example/: README.md  requirements.txt
example/Data_preparation/: 1_Collect_Observation.ipynb  4_input_all_4_years.py
example/Data_preparation/.ipynb_checkpoints/: 1_Collect_Observation-checkpoint.ipynb  2_Collect_STOFS_data-checkpoint.py  3_Collect_wind_and_pressure_data-checkpoint.py  5_input_kfold-checkpoint.ipynb  6_min_data-checkpoint.ipynb  7_spatial_data-checkpoint.ipynb  stations-checkpoint.csv
example/Figures/: Figures.ipynb  all_stations_above_thresholds.csv
example/Model_training/: 1_NeuroCast_train_evaluation.ipynb  2_NeuroCast_train_evaluation_kfold_year.ipynb  5_NeuroCast_sensitivity_Analysis.ipynb
example/Model_training/.ipynb_checkpoints/: 3_NeuroCast_train_evaluation_kfold_station-checkpoint.ipynb  4_NeuroCast_train_evaluation_6min-checkpoint.ipynb  6_NeuroCast_spatial_maps-checkpoint.ipynb  NeuroCast_train_evaluation-checkpoint.ipynb
neurocast/: model.py
neurocast/.ipynb_checkpoints/: __init__-checkpoint.py
